--- a/config.env
+++ b/config.env
@@ -1,23 +1,17 @@
-
-
-# Remove this line first before doing anything else
-_____REMOVE_____THIS_____LINE_____=true
-
-
 # ----------- REQUIRED ----------- #
 
 
 # Get them from https://my.telegram.org/
-API_ID=""
-API_HASH=""
+API_ID="1084628"
+API_HASH="127f513c98d12528003870b7459f575f"
 
 
 # Mongodb url from https://cloud.mongodb.com/
-DATABASE_URL=""
+DATABASE_URL="mongodb+srv://hackmonker:<IAMHERO1234>@cluster0.pfxqg.mongodb.net/<test>?retryWrites=true&w=majority"
 
 
 # Telegram Log Channel ID
-LOG_CHANNEL_ID=""
+LOG_CHANNEL_ID="1001294517132"
 
 
 # USERGE-X MODE
@@ -38,8 +32,8 @@ WORKERS=""
 
 
 # Googel Drive API Keys from https://console.developers.google.com/
-G_DRIVE_CLIENT_ID=""
-G_DRIVE_CLIENT_SECRET=""
+G_DRIVE_CLIENT_ID="1006148580474-ucgmoa7i5gr2r93q85k6bqojrr76pmre.apps.googleusercontent.com"
+G_DRIVE_CLIENT_SECRET="QAieOMwx5PZoVHYEwn05r2Qe"
 
 
 # Set true if it is TeamDrive
@@ -95,7 +89,7 @@ SUDO_TRIGGER="!"
 
 
 # set this to your USERGE-X fork on GitHub
-UPSTREAM_REPO=""
+UPSTREAM_REPO="https://github.com/hackmonker/USERGE-X"
 
 
 # single character for finished progress
@@ -107,7 +101,7 @@ UNFINISHED_PROGRESS_STR='░'
 
 
 # custom name for your sticker pack
-CUSTOM_PACK_NAME=""
+CUSTOM_PACK_NAME="nice kang pack"
 
 
 # set your own custom media for bot pm
@@ -172,5 +166,5 @@ HU_STRING_SESSION=""
 
 # BOT MODE
 # get this from https://t.me/botfather Your USERGE-X Bot
-BOT_TOKEN=""
-OWNER_ID=""  # your user_id
+BOT_TOKEN="1546072923:AAG6SG9Lk4DoI70luCA9A6Oskmbj-jKfJ9E"
+OWNER_ID="866414806"  # your user_id
