--- a/config.env
+++ b/config.env
@@ -7,7 +7,7 @@ API_HASH="127f513c98d12528003870b7459f575f"
 
 
 # Mongodb url from https://cloud.mongodb.com/
-DATABASE_URL="mongodb+srv://hackmonker:<IAMHERO1234>@cluster0.pfxqg.mongodb.net/<cluster0>?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://hackmonker:<BP4W5yN8hqCT9Uk5>@usergex.pfxqg.mongodb.net/<usergex>?retryWrites=true&w=majority"
 
 
 # Telegram Log Channel ID
